去除无用的资源（视频压缩出现没有声音的bug）